<resources>
    <string name="app_name">Conversor de Moedas</string>
    <string name="digite_o_valor_em_reais">Digite o valor em Reais</string>
    <string name="sifrao">R$</string>
    <string name="valor_em_dolar">Valor em dolar</string>
    <string name="dolar">dolar</string>
    <string name="valor_em_euro">Valor em euro</string>
    <string name="calcular">Calcular</string>
    <string name="euro">Euro</string>
</resources>
